Summary of important user-visible changes for instrument-control 0.9.4
-------------------------------------------------------------------

  ** readline: use read terminator if one provided

  ** SERIALPORT: dont use errno in win32 report of error

Summary of important user-visible changes for instrument-control 0.9.3
-------------------------------------------------------------------


  ** SERIALPORT: use max VTIME of 5, allow use of case insensive get properties

  ** TCPCLIENT: add enabletransferdelay property

  ** UDP, UDPPORT: use memmove for overlapped mem usage

  ** VXI11: use inst0 as default instrument name 

  ** MODBUS: use input precision when specified in read

Summary of important user-visible changes for instrument-control 0.9.2
-------------------------------------------------------------------

  ** UDPPORT, UDP: increase buffer read size on larger packets

  ** General updates to support Octave 9+

  ** Updates to package documentation

Summary of important user-visible changes for instrument-control 0.9.1
-------------------------------------------------------------------

  ** bugfix modbus portnumber input

Summary of important user-visible changes for instrument-control 0.9.0
-------------------------------------------------------------------

  ** General updates to support Octave 8+

  ** readline: updated docs, minor bug fixes

  ** VXI11: add instrument name support

  ** UDPPORT: add new writeline function, buffer reading

  ** UDP: buffer reading

Summary of important user-visible changes for instrument-control 0.8.0
-------------------------------------------------------------------

  ** MODBUS: Added new modbus class

  ** TCPSERVER: Added new tcpserver class

  ** minor bug fixes in configure

  ** added QT help doc generation

  ** updates to package documentation

  ** added common functions:
     writeline
     readline
     readbinblock
     writebinblock
     writeread
