@@ -34,7 +34,7 @@ function retval = get (tcpclient, property)
   properties = {'Name', 'Address', 'Port', ...
                 'Type', 'Status', 'Timeout', 'UserData', ...
 		'NumBytesAvailable', 'NumBytesWritten', ...
-		'Terminator', 'EnableTransferDelay' };
+		'Terminator', 'EnableTransferDelay', 'Tag' };
 
   if (nargin == 1)
     property = properties;
