@@ -36,7 +36,7 @@ function retval = get (udpport, property)
                 'LocalPort', 'LocalHost', 'Type', 'Terminator', ...
                 'Status', 'Timeout', 'NumBytesAvailable', 'NumBytesWritten', ...
 		'MulticastGroup', 'EnableMulticast', 'EnableMulticastLoopback', ...
-		'EnablePortSharing', 'EnableBroadcast', 'ByteOrder'};
+		'EnablePortSharing', 'EnableBroadcast', 'ByteOrder', 'Tag'};
 
   if (nargin == 1)
     property = properties;
