@@ -1,3 +1,10 @@
+Summary of important user-visible changes for instrument-control 0.9.4+
+-------------------------------------------------------------------
+
+  ** SERIALPORT, TCPPORT, UDPPORT: add Tag property
+
+  ** Minor build rule updates
+
 Summary of important user-visible changes for instrument-control 0.9.4
 -------------------------------------------------------------------
 
